; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/extr_storage_service.c_fetch_one_path_binlog_finish_clean_up.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/extr_storage_service.c_fetch_one_path_binlog_finish_clean_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fast_task_info = type { i64 }
%struct.TYPE_2__ = type { i32* }

@MAX_PATH_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fast_task_info*)* @fetch_one_path_binlog_finish_clean_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fetch_one_path_binlog_finish_clean_up(%struct.fast_task_info* %0) #0 {
  %2 = alloca %struct.fast_task_info*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.fast_task_info* %0, %struct.fast_task_info** %2, align 8
  %8 = load i32, i32* @MAX_PATH_SIZE, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load %struct.fast_task_info*, %struct.fast_task_info** %2, align 8
  %13 = getelementptr inbounds %struct.fast_task_info, %struct.fast_task_info* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %15, %struct.TYPE_2__** %3, align 8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %4, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  store i32 1, i32* %7, align 4
  br label %38

22:                                               ; preds = %1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32* null, i32** %24, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @storage_reader_remove_from_list(i32* %25)
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @storage_reader_destroy(i32* %27)
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @get_mark_filename_by_reader(i32* %29, i8* %11)
  %31 = call i64 @fileExists(i8* %11)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %22
  %34 = call i32 @unlink(i8* %11)
  br label %35

35:                                               ; preds = %33, %22
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @free(i32* %36)
  store i32 0, i32* %7, align 4
  br label %38

38:                                               ; preds = %35, %21
  %39 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %39)
  %40 = load i32, i32* %7, align 4
  switch i32 %40, label %42 [
    i32 0, label %41
    i32 1, label %41
  ]

41:                                               ; preds = %38, %38
  ret void

42:                                               ; preds = %38
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @storage_reader_remove_from_list(i32*) #2

declare dso_local i32 @storage_reader_destroy(i32*) #2

declare dso_local i32 @get_mark_filename_by_reader(i32*, i8*) #2

declare dso_local i64 @fileExists(i8*) #2

declare dso_local i32 @unlink(i8*) #2

declare dso_local i32 @free(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
